--- a/_config.yml
+++ b/_config.yml
@@ -488,7 +488,7 @@ rating:
 # Show number of visitors to each article.
 # You can visit https://leancloud.cn get AppID and AppKey.
 leancloud_visitors:
-  enable: false
+  enable: true
   app_id: DDrFLaVPmPSKiXNMnTcmKO07-gzGzoHsz
   app_key: 5kQM5NK9V8n9aFBO5rjl43TP
 
@@ -519,7 +519,7 @@ busuanzi_count:
 
 
 # Enable baidu push so that the blog will push the url to baidu automatically which is very helpful for SEO
-baidu_push: false
+baidu_push: true
 
 # Google Calendar
 # Share your recent schedule to others via calendar page
