--- a/_config.yml
+++ b/_config.yml
@@ -250,7 +250,7 @@ toc:
 # Creative Commons 4.0 International License.
 # http://creativecommons.org/
 # Available: by | by-nc | by-nc-nd | by-nc-sa | by-nd | by-sa | zero
-#creative_commons: by-nc-sa
+creative_commons: by-nc-sa
 #creative_commons:
 
 
@@ -294,7 +294,7 @@ links:
   开源视窗: http://www.oseye.net/
   小弟子的网络之路: http://chenpengpeng.blog.51cto.com/
   寄存心–移动开发: http://www.jicunxin.com/
-  Ticmy's Blog: http://www.ticmy.com/
+  TicmyBlog: http://www.ticmy.com/
   中国程序员人才网: http://www.cxyrc.com/
   图表秀-在线图表制作: http://www.tubiaoxiu.com/
   IT热血青年: http://blog.itblood.com/
