--- a/_config.yml
+++ b/_config.yml
@@ -520,7 +520,7 @@ busuanzi_count:
   site_pv_header: <i class="fa fa-eye">本站总访问量</i>
   site_pv_footer: 次
   # custom pv span for one page only
-  page_pv: false
+  page_pv: true
   page_pv_header: <i class="fa fa-file-o">本文总阅读量</i>
   page_pv_footer: 次
 
