add google site verification code

--- a/_config.yml
+++ b/_config.yml
@@ -429,7 +429,7 @@ changyan:
 
 # Google Webmaster tools verification setting
 # See: https://www.google.com/webmasters/
-#google_site_verification:
+google_site_verification: EQxpnRQ0t7ULCtknIN_oBRlo8FXtZsL-OaiUcI50_wU
 
 # Google Analytics
 #google_analytics:
