--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,8 @@ author: LiHongZhe
 language: zh-Hans
 date_format: '%Y-%m-%d'
 
+repository: lihongzheshuai/lihongzheshuai.github.io
+
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com' and baseurl as '/child'
 url: http://www.coderli.com
