change gemfile for vercel

--- a/_config.yml
+++ b/_config.yml
@@ -72,6 +72,7 @@ plugins:
 # - jemoji
  - jekyll-sitemap
  - jekyll-feed
+ - jekyll-seo-tag
 
 # ---------------------------------------------------------------
 # Site Information Settings
