--- a/_config.yml
+++ b/_config.yml
@@ -73,6 +73,7 @@ plugins:
  - jekyll-sitemap
  - jekyll-feed
  - jekyll-seo-tag
+ - jekyll-paginate
 
 # ---------------------------------------------------------------
 # Site Information Settings
