add wordcount and minread

--- a/_config.yml
+++ b/_config.yml
@@ -74,6 +74,9 @@ plugins:
  - jekyll-feed
  - jekyll-seo-tag
  - jekyll-paginate
+ - jekyll-toc
+ - jekyll-word-count
+ - jekyll-read-time
 
 # ---------------------------------------------------------------
 # Site Information Settings
@@ -326,8 +329,8 @@ post_meta:
 # Post wordcount display settings
 post_wordcount:
   item_text: true
-  wordcount: false
-  min2read: false
+  wordcount: true
+  min2read: true
   separated_meta: true
 
 # Wechat Subscriber
