--- a/_config.yml
+++ b/_config.yml
@@ -323,7 +323,7 @@ auto_excerpt:
 post_meta:
   item_text: true
   created_at: true
-  updated_at: false
+  updated_at: true
   categories: true
 
 # Post wordcount display settings
