add wechat pub qrcode pic but not open

--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,8 @@ qq:
   add_group_url: https://qm.qq.com/q/bveoRTWURG
   group_qr_code: /images/qrcode_javagroup.jpg
 
+# wechat:
+  # pub_qr_code: /images/qrcode_for_pub.png
 # Pagination
 paginate: 10
 #paginate_path: "/page:num/"
