--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,8 @@ qq:
   add_group_url: https://qm.qq.com/q/bveoRTWURG
   # group_qr_code: /images/qrcode_javagroup.jpg
 
-wechat:
-  pub_qr_code: /images/wechat_pub_code.png
+#wechat:
+  #pub_qr_code: /images/wechat_pub_code.png
 # Pagination
 paginate: 10
 #paginate_path: "/page:num/"
@@ -341,10 +341,10 @@ post_wordcount:
   separated_meta: true
 
 # Wechat Subscriber
-#wechat_subscriber:
-  #enabled: true
-  #qcode: /path/to/your/wechatqcode ex. /uploads/wechat-qcode.jpg
-  #description: ex. subscribe to my blog by scanning my public wechat account
+wechat_subscriber:
+  enabled: true
+  qcode: /images/wechat-qrcode.png
+  description: 欢迎订阅我的微信公众号，精选好文，内嵌文心智能体“Java菜鸟助教”
 
 # Declare license on posts
 post_copyright:
