--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ toc: true
 
 comments:
   # Global switch for the post comment system. Keeping it empty means disabled.
-  provider: giscus # [disqus | utterances | giscus]
+  provider: "giscus" # [disqus | utterances | giscus]
   # The provider options are as follows:
   disqus:
     shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
@@ -119,8 +119,8 @@ comments:
     issue_term: # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    repo: # <gh-username>/<repo>
-    repo_id:
+    repo: lihongzheshuai/lihongzheshuai.github.io # <gh-username>/<repo>
+    repo_id: lihongzheshuai.github.io
     category:
     category_id:
     mapping: # optional, default to 'pathname'
