--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ _site
 # NPM dependencies
 node_modules
 package-lock.json
+package.json
 
 # IDE configurations
 .idea
@@ -24,3 +25,5 @@ package-lock.json
 # Misc
 _sass/dist
 assets/js/dist
+
+.vercel/
