fix repo id for giscus

--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ toc: true
 
 comments:
   # Global switch for the post comment system. Keeping it empty means disabled.
-  provider: "giscus" # [disqus | utterances | giscus]
+  provider: giscus # [disqus | utterances | giscus]
   # The provider options are as follows:
   disqus:
     shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
@@ -121,8 +121,8 @@ comments:
   giscus:
     repo: lihongzheshuai/lihongzheshuai.github.io # <gh-username>/<repo>
     repo_id: MDEwOlJlcG9zaXRvcnkyNzA2ODAyMQ==
-    category:
-    category_id:
+    category: General
+    category_id: DIC_kwDOAZ0Gdc4CROQ1
     mapping: # optional, default to 'pathname'
     strict: # optional, default to '0'
     input_position: # optional, default to 'bottom'
