update theme files

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,35 @@
+# Custom
+urls.txt
+push_post.py
+
 # Bundler cache
 .bundle
 vendor
 Gemfile.lock
-urls.txt
-push_post.py
-package.json
-package-lock.json
-node_modules/
 .vercel/
 _site/
+
+# Jekyll cache
+.jekyll-cache
+.jekyll-metadata
+_site
+
+# RubyGems
+*.gem
+
+# NPM dependencies
+node_modules
+package-lock.json
+package.json
+
+# IDE configurations
+.idea
+.vscode/*
+!.vscode/settings.json
+!.vscode/extensions.json
+!.vscode/tasks.json
+
+# Misc
+_sass/dist
+assets/js/dist
+.vercel
