change self host env

--- a/_config.yml
+++ b/_config.yml
@@ -135,9 +135,7 @@ assets:
     enabled: true # boolean, keep empty means false
     # specify the Jekyll environment, empty means both
     # only works if `assets.self_host.enabled` is 'true'
-    env: production # [development | production]
-
-environment: production
+    env: development # [development | production]
 
 pwa:
   enabled: false # the option for PWA feature (installable)
