--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone:
 
 title: OneCoder # the main title
 
-tagline: "一个程序员的自留地，记录学习Java、Python以及其他所有技术的心得体会。一起成长，三人行必有我师。"
+tagline: "一个程序员的自留地，记录学习Java、Python、C++以及其他所有技术的心得体会。三人行必有我师。"
  # it will display as the sub-title
 
 description: >- 
