--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone:
 
 title: OneCoder # the main title
 
-tagline: "一个中年人的自留地，记录学习Java、Python、C++以及其他所有技术的心得体会。三人行必有我师。"
+tagline: "一个中年人的自留地，记录学习Java、Python、C++以及其他所有技术的心得体会。本站唯一网址：https://www.coderli.com"
  # it will display as the sub-title
 
 description: >- 
