update two posts

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ tagline: "一个中年人的自留地，记录学习Java、Python、C++以及其
  # it will display as the sub-title
 
 description: >- 
-  Java, Python, Git, SVN, 算法, 架构, Jekyll, Log, 开源, MySQL, PostgreSQL, Hadoop, 大数据, 云计算
+  C++, GESP, NOI, Java, Python, Git, SVN, 算法, 架构, Jekyll, Log, 开源, MySQL, PostgreSQL, Hadoop, 大数据, 云计算
 # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
